tests/fixtures/invalid/sum_dict.py
# Cannot call sum() with Dict[str, int]
x = sum({"a": 1})
